# ful

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.probe/: cpuid.cpp  ifunc.cpp
code/: CMakeLists.txt
code/bnc/: CMakeLists.txt  buffer.cpp  buffer.hpp  catchhacks.hpp  eastlhacks.cpp
code/bnc/ful/: convert.cpp  string.cpp  string_masm.asm  string_search.cpp  unicode.cpp
code/cmn/: CMakeLists.txt  buffer.cpp  buffer.hpp  constants.hpp  data.hpp
code/lib/: CMakeLists.txt
code/lib/ful/: architecture.hpp  compiler.hpp  constexpr.hpp  container.hpp  convert.cpp  convert.hpp  cpuid.cpp  cpuid.hpp  cstr.hpp  cstrext.hpp  cstrfwd.hpp  dispatch.hpp  heap.hpp  intrinsics.hpp  intrinsics_x86.hpp  memory.hpp  memoryfwd.hpp  point.hpp  ranges.hpp  static.hpp  staticfwd.hpp  string.cpp  string.hpp  string_avx.cpp  string_avx.hpp  string_avx2.hpp  string_compare.hpp  string_init.hpp  string_modify.hpp  string_none.hpp  string_search.cpp  string_search.hpp  string_sse.cpp  string_sse.hpp  string_sse2.cpp  string_sse2.hpp  string_x86.cpp  types.hpp  unicode.cpp  unicode.hpp  (+4 more)
code/src/: CMakeLists.txt
code/src/ful/: compiler.hpp  container.hpp  cpuid.cpp  cpuid.hpp  cstr.hpp  heap.cpp  heap.hpp  heapfwd.hpp  intrinsics.hpp  intrinsics_x86.hpp  memory.hpp  point.hpp  point_utils.hpp  ranges.hpp  static.hpp  stdhacks.hpp  stdint.hpp  string.cpp  string.hpp  string_avx.cpp  string_avx.hpp  string_avx2.hpp  string_modify.hpp  string_none.hpp  string_search.cpp  string_search.hpp  string_sse.cpp  string_sse.hpp  string_sse2.cpp  string_sse2.hpp  string_sse4_2.hpp  string_x86.cpp  types.hpp  unicode.cpp  unicode.hpp  unicode_avx2.hpp  unicode_convert.cpp  unicode_convert.hpp  unicode_none.hpp  unsafe_ptr.hpp  (+1 more)
code/src/ful/probe/: cpuid.cpp  cpuid.hpp
code/src/private/: cpuid.cpp  cpuid.hpp
code/tst/: CMakeLists.txt  container.hpp
code/tst/ful/: cstr.cpp  heap.cpp  memory.cpp  point.cpp  static.cpp  string.cpp  unicode.cpp  view.cpp
data/: eng.html  eng.utf8  got.utf8  jap.html  jap.txt  rus.html  rus.utf8
plot/: plot_dump.m
